# custom-controls

./: CMakeLists.txt  README.md  config.json  config_example.json
.github/workflows/: build.yml
assets/layouts/: default.json
examples/: example.cpp
include/: ButtonControl.h  Control.h  ExpressionEvaluator.h  InputDispatcher.h  JoystickControl.h  LayoutManager.h
lib/nlohmann/: json.cpp  json.hpp
src/: Button.cpp  Button.h  ButtonControl.cpp  ButtonManager.cpp  ButtonManager.h  ButtonRenderer.cpp  ButtonRenderer.h  ConfigManager.cpp  ConfigManager.h  ConfigMenu.cpp  ConfigMenu.h  Control.cpp  ControlsManager.cpp  ControlsManager.h  ExpressionEvaluator.cpp  InputDispatcher.cpp  InputHandler.cpp  InputHandler.h  JoystickControl.cpp  LayoutManager.cpp  UIRenderer.cpp  UIRenderer.h  main.cpp
